--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://anon1777.github.io/bsfix/fix.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h1>joseph farrell portfolio year 3 placeholder text</h1>
-    
+    <h2>joseph farrell portfolio year 3 placeholder text</h2>
+    <h3>joseph farrell portfolio year 3 placeholder text</h3>
+    <h4>joseph farrell portfolio year 3 placeholder text</h4>
+    <h5>joseph farrell portfolio year 3 placeholder text</h5>
+    <h6>joseph farrell portfolio year 3 placeholder text</h6>
     <script src="scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
