--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://anon1777.github.io/bsfix/fix.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <div class="row">
+    <div class="to-hide">
+        <div class="progress mx-auto" style="width: 70%; margin-top: 10%;">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" id="prog" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+        </div>
+        <p id="tooltips" class="text-center text-light">Welcome to my portfolio!</p>
+        <p id="percent" class="text-center text-light"></p>
+    </div>
+    <div class="row hidden">
         <div class="col col-xxl-2"></div>
         <div class="col col-xxl-8">
             <h1 id="header" class="text-center">----Joseph Farrell Student Portfolio (YEAR 3)----</h1>
