--- a/index.html
+++ b/index.html
@@ -9,15 +9,42 @@
     <link rel="stylesheet" href="https://anon1777.github.io/bsfix/fix.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
-<body>
-    <div class="to-hide">
+<body id="change">
+    <div id="to-hide">
         <div class="progress mx-auto" style="width: 70%; margin-top: 10%;">
             <div class="progress-bar progress-bar-striped progress-bar-animated" id="prog" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
         </div>
         <p id="tooltips" class="text-center text-light">Welcome to my portfolio!</p>
         <p id="percent" class="text-center text-light"></p>
     </div>
-    <div class="row hidden">
+    <div class="hidden" id="unhide">
+        <nav class="navbar bg-secondary hidden" id="unhide-s">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">
+                <img src="img/favicon.png" alt="Logo" width="32.41px" height="32.41px" class="d-inline-block align-text-top">
+                <h1 class="text-light d-inline-block">
+                    Joseph Farrell
+                </h1>
+              </a>
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item d-inline-block">
+                  <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item d-inline-block">
+                  <a class="nav-link" href="education.html">Education</a>
+                </li>
+                <li class="nav-item d-inline-block">
+                  <a class="nav-link" href="work.html">Work</a>
+                </li>
+                <li class="nav-item d-inline-block">
+                  <a class="nav-link" href="interests.html">Interests</a>
+                </li>
+                <li class="nav-item d-inline-block">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+            </div>
+        </nav>
         <div class="col col-xxl-2"></div>
         <div class="col col-xxl-8">
             <h1 id="header" class="text-center">----Joseph Farrell Student Portfolio (YEAR 3)----</h1>
