i need to bsfix real quick lol

--- a/index.html
+++ b/index.html
@@ -16,31 +16,34 @@
         </div>
         <p id="tooltips" class="text-center text-light">Welcome to my portfolio!</p>
         <p id="percent" class="text-center text-light"></p>
+        <div class="row-c mx-auto">
+          <button id="skip" class="btn btn-success skipbtn" onclick="skip()">Skip (may cause visual bugs)</button>
+        </div>
     </div>
     <div class="hidden" id="unhide">
         <nav class="navbar bg-secondary hidden" id="unhide-s">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">
-                <img src="img/favicon.png" alt="Logo" width="32.41px" height="32.41px" class="d-inline-block align-text-top">
-                <h1 class="text-light d-inline-block">
-                    Joseph Farrell
-                </h1>
+                <img src="img/favicon.png" alt="Logo" class="d-inline-block align-text-top ms-5 mb-5 seychelles">
               </a>
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <h1 class="text-light d-inline-block mb-5">
+                  Joseph Farrell
+              </h1>
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item d-inline-block">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a class="nav-link text-navbar" href="about.html">About</a>
                 </li>
                 <li class="nav-item d-inline-block">
-                  <a class="nav-link" href="education.html">Education</a>
+                  <a class="nav-link text-navbar" href="education.html">Education</a>
                 </li>
                 <li class="nav-item d-inline-block">
-                  <a class="nav-link" href="work.html">Work</a>
+                  <a class="nav-link text-navbar" href="work.html">Work</a>
                 </li>
                 <li class="nav-item d-inline-block">
-                  <a class="nav-link" href="interests.html">Interests</a>
+                  <a class="nav-link text-navbar" href="interests.html">Interests</a>
                 </li>
                 <li class="nav-item d-inline-block">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link text-navbar" href="contact.html">Contact</a>
                 </li>
             </ul>
             </div>
