--- a/about.html
+++ b/about.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About -=+=- Joseph Farrell Student Portfolio</title>
+    <link rel="stylesheet" href="style2.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://anon1777.github.io/bsfix/fix.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 <body>
-    
+    <nav class="navbar bg-secondary hidden" id="unhide-s">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/favicon.png" alt="Logo" class="d-inline-block align-text-top ms-5 mb-5 seychelles">
+          </a>
+          <h1 class="text-light d-inline-block mb-5">
+              Joseph Farrell
+          </h1>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item d-inline-block">
+              <a class="nav-link text-navbar" href="about.html">About</a>
+            </li>
+            <li class="nav-item d-inline-block">
+              <a class="nav-link text-navbar" href="education.html">Education</a>
+            </li>
+            <li class="nav-item d-inline-block">
+              <a class="nav-link text-navbar" href="work.html">Work</a>
+            </li>
+            <li class="nav-item d-inline-block">
+              <a class="nav-link text-navbar" href="interests.html">Interests</a>
+            </li>
+            <li class="nav-item d-inline-block">
+              <a class="nav-link text-navbar" href="contact.html">Contact</a>
+            </li>
+        </ul>
+        </div>
+    </nav>
+    <div class="content">
+        <h1 class="text-center text-light text-header">Hello! My name is Joseph Farrell</h1>
+        <h3 class="text-light text-content">I am 17 (almost 18) years old. I have been coding for six years and know five different coding languages. I play the saxophone for my 
+            school's band and am one of the saxophone section leaders this year.</h3>
+    </div>
 </body>
 </html>
