wowee! a lot of edits!!

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <nav class="navbar bg-secondary hidden" id="unhide-s">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="img/favicon.png" alt="Logo" class="d-inline-block align-text-top ms-5 mb-5 seychelles">
+            <img src="img/logo.png" alt="Logo" class="d-inline-block align-text-top ms-5 mb-5 seychelles">
           </a>
           <h1 class="text-light d-inline-block mb-5">
               Joseph Farrell
@@ -37,5 +37,10 @@
         </ul>
         </div>
     </nav>
+    <div class="content">
+      <h1 class="text-center text-light text-header">Contact Me</h1>
+      <h3 class="text-light text-content">E-mail: <a href="mailto:224jfarrell@frhsd.com">224jfarrell@frhsd.com</a><br>
+      Github: <a href="https://github.com/224jfarrell">224jfarrell</a>, <a href="https://github.com/anon1777">Anon1777</a><br></h3>
+    </div>
 </body>
 </html>
