--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
     <nav class="navbar bg-secondary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="img/favicon.png" alt="Logo" class="d-inline-block align-text-top ms-5 mb-5 seychelles">
+            <img src="img/logo.png" alt="Logo" class="d-inline-block align-text-top ms-5 mb-5 seychelles">
           </a>
           <h1 class="text-light d-inline-block mb-5">
               Joseph Farrell
@@ -37,5 +37,40 @@
         </ul>
         </div>
     </nav>
+    <div class="content text-center">
+      <h1 class="text-light text-center text-header">Projects I Have Made</h1>
+      <a href="https://224jfarrell.github.io/student_portfolio/"><img class="project" src="img/portfolio20212022.png"></a>
+      <h3 class="text-light text-content mt-5">Student Portfolio 2021-2022 -></h3>
+      <br><br><br><br><br><br><br><br>
+      <a href="https://224jfarrell.github.io/little-bird-toys/"><img class="project" src="img/littlebirdtoystore.png"></a>
+      <h3 class="text-light text-content">Little Bird Toy Store -></h3>
+      <br><br><br><br><br><br><br><br>
+      <a href="https://224jfarrell.github.io/Rock_Project/"><img class="project" src="img/petrockproject.png"></a>
+      <h3 class="text-light text-content">Pet Rock Project -></h3>
+      <br><br><br><br><br><br><br><br>
+      <a href="https://224jfarrell.github.io/rps/"><img class="project" src="img/rps.png"></a>
+      <h3 class="text-light text-content">Rock Paper Scissors -></h3>
+      <br><br><br><br><br><br><br><br>
+      <a href="https://224jfarrell.github.io/Shark_Tank/home.html"><img class="project" src="img/saxoscope.png"></a>
+      <h3 class="text-light text-content">Shark Tank -></h3>
+      <br><br><br><br><br><br><br><br>
+      <a href="https://224jfarrell.github.io/website-redsign/"><img class="project" src="img/websiteredesign.png"></a>
+      <h3 class="text-light text-content">Website Redesign -></h3>
+      <br><br><br><br><br><br><br><br>
+      <a href="https://224jfarrell.github.io/student__portfolio/"><img class="project" src="img/portfolio20222023.png"></a>
+      <h3 class="text-light text-content">Student Portfolio 2022-2023 -></h3>
+      <br><br><br><br><br><br><br><br>
+      <a href="https://224jfarrell.github.io/website__recreation/"><img class="project" src="img/websiterecreation.png"></a>
+      <h3 class="text-light text-content">Website Recreation -></h3>
+      <br><br><br><br><br><br><br><br>
+      <a href="https://224jfarrell.github.io/simon/"><img class="project" src="img/simon.png"></a>
+      <h3 class="text-light text-content">Simon -></h3>
+      <br><br><br><br><br><br><br><br>
+      <a href="https://anon1777.github.io/bsfix/README.md"><img class="project" src="img/bsfix.png"></a>
+      <h3 class="text-light text-content">BSFIX -></h3>
+      <br><br><br><br><br><br><br><br>
+      <a href="https://anon1777.github.io/Country_Database_Redux/"><img class="project" src="img/countrydatabase.png"></a>
+      <h3 class="text-light text-content">Country Database -></h3>
+    </div>
 </body>
 </html>
