--- a/education.html
+++ b/education.html
@@ -13,7 +13,7 @@
     <nav class="navbar bg-secondary hidden" id="unhide-s">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="img/favicon.png" alt="Logo" class="d-inline-block align-text-top ms-5 mb-5 seychelles">
+            <img src="img/logo.png" alt="Logo" class="d-inline-block align-text-top ms-5 mb-5 seychelles">
           </a>
           <h1 class="text-light d-inline-block mb-5">
               Joseph Farrell
@@ -37,5 +37,9 @@
         </ul>
         </div>
     </nav>
+    <div class="content">
+      <h1 class="text-header text-light text-center"></h1>
+      <h3 class="text-content text-light"></h3>
+    </div>
 </body>
 </html>
