--- a/about.html
+++ b/about.html
@@ -41,7 +41,19 @@
         <h1 class="text-center text-light text-header">Hello! My name is Joseph Farrell</h1>
         <img src="img/bryg.jpg" alt="">
         <h3 class="text-light text-content">I am 17 (almost 18) years old. I have been coding for six years and know five different coding languages. I play the saxophone for my 
-            school's band and am one of the section leaders this year.</h3>
+            school's band and am one of the section leaders this year.
+            <br><br>
+        </h3>
+        <h2 class="text-center text-light text-header">HTML</h2>
+        <h3>HTML is the language I have the most experience in. I started learning it in 2017 and I understand most of everything that it has to offer.</h3>
+        <h2 class="text-center text-light text-header">CSS</h2>
+        <h3>CSS is the easiest language that I have learned so far. I started learning about it around the same time as HTML, but I did not go very in-depth into learning it.</h3>
+        <h2 class="text-center text-light text-header">Javascript</h2>
+        <h3>I am learning Javascript right now and I am understanding it so far. I did start learning it in 2017, but moved to Python later on. This caused me to forget a lot about Javascript, but I am relearning it quickly.</h3>
+        <h2 class="text-center text-light text-header">Python</h2>
+        <h3>I started learning Python in 2019 and used it to work on two internships for the Wonders & Worries Foundation. I know the basics of Python but I still struggle with it.</h3>
+        <h2 class="text-center text-light text-header">Java</h2>
+        <h3>I am currently learning Java now and think it is the hardest language of these five. I am managing to stay on top of it, but I know even less of this than I do Python, which shows how little I know and how much I have yet to learn.</h3>
     </div>
 </body>
 </html>
