--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,8 @@
     <div class="content">
       <h1 class="text-center text-light text-header">Contact Me</h1>
       <h3 class="text-light text-content">E-mail: <a href="mailto:224jfarrell@frhsd.com">224jfarrell@frhsd.com</a><br>
-      Github: <a href="https://github.com/224jfarrell">224jfarrell</a>, <a href="https://github.com/anon1777">Anon1777</a><br></h3>
+      Github: <a href="https://github.com/224jfarrell">224jfarrell</a>, <a href="https://github.com/anon1777">Anon1777</a><br>
+      Instagram: <a href="https://www.instagram.com/joesph._f">@joesph._f</a></h3>
     </div>
 </body>
 </html>
