--- a/education.html
+++ b/education.html
@@ -38,8 +38,14 @@
         </div>
     </nav>
     <div class="content">
-      <h1 class="text-header text-light text-center"></h1>
-      <h3 class="text-content text-light"></h3>
+      <h1 class="text-header text-light text-center">Web Design / Computer Science classes</h1>
+      <h3 class="text-content text-light">I have taken multiple web design courses to expand my knowledge on this subject</h3>
+      <h2 class="text-header text-light text-center">CodeWizardsHQ (2017-2022)</h2>
+      <h3 class="text-content text-light">Through CodeWizardsHQ, I have learned how to code in HTML, CSS, Javascript, and Python. I have also participated in two internships through them as my capstone projects to gain experience for the real world.</h3>
+      <h2 class="text-header text-light text-center">Web Design Pathway Program (2021-Present, Graduating in 2024)</h2>
+      <h3 class="text-content text-light">The Web Design Pathway Program (WDPP) has reinforced my knowledge in HTML and CSS. Along with this, it has retaught me Javascript and even went into more detail than CodeWizardsHQ did.</h3>
+      <h2 class="text-header text-light text-center">AP Computer Science A (2023-2024)</h2>
+      <h3 class="text-content text-light">AP Computer Science A has taught me Java and how to use it to store data. This class is difficult, but teaches the content well.</h3>
     </div>
 </body>
 </html>
