iot6r73nf73na ayc7e3 jkaybeg

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <h1 class="text-center text-light text-header">Contact Me</h1>
       <h3 class="text-light text-content">E-mail: <a href="mailto:224jfarrell@frhsd.com">224jfarrell@frhsd.com</a><br>
       Github: <a href="https://github.com/224jfarrell">224jfarrell</a>, <a href="https://github.com/anon1777">Anon1777</a><br>
-      Instagram: <a href="https://www.instagram.com/joesph._f">@joesph._f</a></h3>
+      Instagram: <a href="https://www.instagram.com/joesph_.f">@joesph_.f</a></h3>
     </div>
 </body>
 </html>
