--- a/interests.html
+++ b/interests.html
@@ -38,8 +38,11 @@
         </div>
     </nav>
     <div class="content">
-      <h1 class="text-center text-light text-header"></h1>
-      <h3 class="text-light text-content"></h3>
+      <h1 class="text-center text-light text-header">My Interests</h1>
+      <h2 class="text-center text-light text-header">Band</h2>
+      <h3 class="text-light text-content">I have been playing my saxophone for seven years. In that time, I have earned the position of Field Captain to help set up the field for performances during football games, and Section Leader to help teach and mentor my section.</h3>
+      <h2 class="text-center text-light text-header">Coding</h2>
+      <h3 class="text-light text-content">In my sophomore year, I started a new coding project -- the Country Database. I have been working on it since then, making the website look good. It is still a work in progress, but I have not stopped working on it.</h3>
     </div>
 </body>
 </html>
