--- a/education.html
+++ b/education.html
@@ -39,7 +39,7 @@
     </nav>
     <div class="content">
       <h1 class="text-header text-light text-center">Web Design / Computer Science classes</h1>
-      <h3 class="text-content text-light">I have taken multiple web design courses to expand my knowledge on this subject</h3>
+      <h3 class="text-content text-light">I have taken multiple web design courses to expand my knowledge on this subject.</h3>
       <h2 class="text-header text-light text-center">CodeWizardsHQ (2017-2022)</h2>
       <h3 class="text-content text-light">Through CodeWizardsHQ, I have learned how to code in HTML, CSS, Javascript, and Python. I have also participated in two internships through them as my capstone projects to gain experience for the real world.</h3>
       <h2 class="text-header text-light text-center">Web Design Pathway Program (2021-Present, Graduating in 2024)</h2>
