--- a/about.html
+++ b/about.html
@@ -39,7 +39,9 @@
     </nav>
     <div class="content">
         <h1 class="text-center text-light text-header">Hello! My name is Joseph Farrell</h1>
-        <img src="img/bryg.jpg" alt="">
+        <div class="full mx-auto">
+          <img src="img/bryg.jpg" class="mx-auto me mb-5" alt="" title="That's Me!!!! (in sophomore year)">
+        </div>
         <h3 class="text-light text-content">I am 17 (almost 18) years old. I have been coding for six years and know five different coding languages. I play the saxophone for my 
             school's band and am one of the section leaders this year.
             <br><br>
