--- a/index.html
+++ b/index.html
@@ -20,39 +20,39 @@
           <button id="skip" class="btn btn-success skipbtn" onclick="skip()">Skip (may cause visual bugs)</button>
         </div>
     </div>
+    <nav class="navbar hidden bg-secondary" id="unhide-s">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="img/logo.png" alt="Logo" class="d-inline-block align-text-top ms-5 mb-5 seychelles">
+        </a>
+        <h1 class="text-light d-inline-block mb-5">
+          Joseph Farrell
+        </h1>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item d-inline-block">
+            <a class="nav-link text-navbar" href="about.html">About</a>
+          </li>
+          <li class="nav-item d-inline-block">
+            <a class="nav-link text-navbar" href="education.html">Education</a>
+          </li>
+          <li class="nav-item d-inline-block">
+            <a class="nav-link text-navbar" href="work.html">Work</a>
+          </li>
+          <li class="nav-item d-inline-block">
+            <a class="nav-link text-navbar" href="interests.html">Interests</a>
+          </li>
+          <li class="nav-item d-inline-block">
+            <a class="nav-link text-navbar" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="hidden" id="unhide">
-        <nav class="navbar bg-secondary hidden" id="unhide-s">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png" alt="Logo" class="d-inline-block align-text-top ms-5 mb-5 seychelles">
-              </a>
-              <h1 class="text-light d-inline-block mb-5">
-                  Joseph Farrell
-              </h1>
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item d-inline-block">
-                  <a class="nav-link text-navbar" href="about.html">About</a>
-                </li>
-                <li class="nav-item d-inline-block">
-                  <a class="nav-link text-navbar" href="education.html">Education</a>
-                </li>
-                <li class="nav-item d-inline-block">
-                  <a class="nav-link text-navbar" href="work.html">Work</a>
-                </li>
-                <li class="nav-item d-inline-block">
-                  <a class="nav-link text-navbar" href="interests.html">Interests</a>
-                </li>
-                <li class="nav-item d-inline-block">
-                  <a class="nav-link text-navbar" href="contact.html">Contact</a>
-                </li>
-            </ul>
-            </div>
-        </nav>
         <div class="col col-xxl-2"></div>
         <div class="col col-xxl-8">
-            <h1 id="header" class="text-center">----Joseph Farrell Student Portfolio (YEAR 3)----</h1>
+          <h1 id="header" class="text-center">----Joseph Farrell Student Portfolio (YEAR 3)----</h1>
         </div>
-        <div class="col col-xxl-2"></div>
+      <div class="col col-xxl-2"></div>
     </div>
     <script src="scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
