--- a/work.html
+++ b/work.html
@@ -39,36 +39,181 @@
     </nav>
     <div class="content text-center">
       <h1 class="text-light text-center text-header">Projects I Have Made</h1>
-      <a href="https://224jfarrell.github.io/student_portfolio/"><img class="project" src="img/portfolio20212022.png"></a>
-      <h3 class="text-light text-content mt-5">Student Portfolio 2021-2022 -></h3>
-      <br><br><br><br><br><br><br><br>
-      <a href="https://224jfarrell.github.io/little-bird-toys/"><img class="project" src="img/littlebirdtoystore.png"></a>
-      <h3 class="text-light text-content">Little Bird Toy Store -></h3>
-      <br><br><br><br><br><br><br><br>
-      <a href="https://224jfarrell.github.io/Rock_Project/"><img class="project" src="img/petrockproject.png"></a>
-      <h3 class="text-light text-content">Pet Rock Project -></h3>
-      <br><br><br><br><br><br><br><br>
-      <a href="https://224jfarrell.github.io/rps/"><img class="project" src="img/rps.png"></a>
-      <h3 class="text-light text-content">Rock Paper Scissors -></h3>
-      <br><br><br><br><br><br><br><br>
-      <a href="https://224jfarrell.github.io/Shark_Tank/home.html"><img class="project" src="img/saxoscope.png"></a>
-      <h3 class="text-light text-content">Shark Tank -></h3>
-      <br><br><br><br><br><br><br><br>
-      <a href="https://224jfarrell.github.io/website-redsign/"><img class="project" src="img/websiteredesign.png"></a>
-      <h3 class="text-light text-content">Website Redesign -></h3>
-      <br><br><br><br><br><br><br><br>
-      <a href="https://224jfarrell.github.io/student__portfolio/"><img class="project" src="img/portfolio20222023.png"></a>
-      <h3 class="text-light text-content">Student Portfolio 2022-2023 -></h3>
-      <br><br><br><br><br><br><br><br>
-      <a href="https://224jfarrell.github.io/website__recreation/"><img class="project" src="img/websiterecreation.png"></a>
-      <h3 class="text-light text-content">Website Recreation -></h3>
-      <br><br><br><br><br><br><br><br>
-      <a href="https://224jfarrell.github.io/simon/"><img class="project" src="img/simon.png"></a>
-      <h3 class="text-light text-content">Simon -></h3>
-      <br><br><br><br><br><br><br><br>
-      <a href="https://anon1777.github.io/bsfix/README.md"><img class="project" src="img/bsfix.png"></a>
-      <h3 class="text-light text-content">BSFIX -></h3>
-      <br><br><br><br><br><br><br><br>
+      <div class="row" id="a">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <h3 class="text-light text-content mt-5">Student Portfolio 2021-2022 -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/student_portfolio/"><img class="project" src="img/portfolio20212022.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="b">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Little Bird Toy Store -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/little-bird-toys/"><img class="project" src="img/littlebirdtoystore.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="c">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Pet Rock Project -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/Rock_Project/"><img class="project" src="img/petrockproject.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="d">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Rock Paper Scissors -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/rps/"><img class="project" src="img/rps.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="e">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Shark Tank -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+        </div>
+        <a href="https://224jfarrell.github.io/Shark_Tank/home.html"><img class="project" src="img/saxoscope.png"></a>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="f">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Website Redesign -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/website-redsign/"><img class="project" src="img/websiteredesign.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="g">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Student Portfolio 2022-2023 -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/student__portfolio/"><img class="project" src="img/portfolio20222023.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="h">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Website Recreation -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/website__recreation/"><img class="project" src="img/websiterecreation.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="i">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Simon -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/simon/"><img class="project" src="img/simon.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="j">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">BSFIX -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://anon1777.github.io/bsfix/README.md"><img class="project" src="img/bsfix.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="k">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Picture Slideshow -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/Farrell-P2/is219-p2/"><img class="project" src="img/ss.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="l">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Movie Rankings -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/NJIT-3_StarterFiles/"><img class="project" src="img/movies.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="m">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Magic 8-Ball -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/8ball/"><img class="project" src="img/8ball.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="n">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Seychelles -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/MY-FAVORITE-PROJECT--------/"><img class="project" src="img/syc.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="n">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Mad Libs -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/mad-libs/"><img class="project" src="img/ml.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="n">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Birthday Project -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/birthday-project/"><img class="project" src="img/bday.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
       <a href="https://anon1777.github.io/Country_Database_Redux/"><img class="project" src="img/countrydatabase.png"></a>
       <h3 class="text-light text-content">Country Database -></h3>
     </div>
