--- a/work.html
+++ b/work.html
@@ -89,8 +89,8 @@
           <h3 class="text-light text-content">Shark Tank -></h3>
         </div>
         <div class="col col-6 pt-5">
+          <a href="https://224jfarrell.github.io/Shark_Tank/home.html"><img class="project" src="img/saxoscope.png"></a>
         </div>
-        <a href="https://224jfarrell.github.io/Shark_Tank/home.html"><img class="project" src="img/saxoscope.png"></a>
         <div class="col col-1"></div>
       </div>
       <div class="row" id="f">
@@ -203,7 +203,7 @@
         </div>
         <div class="col col-1"></div>
       </div>
-      <div class="row" id="n">
+      <div class="row" id="o">
         <div class="col col-2"></div>
         <div class="col col-3">
           <br><br>
@@ -214,8 +214,39 @@
         </div>
         <div class="col col-1"></div>
       </div>
-      <a href="https://anon1777.github.io/Country_Database_Redux/"><img class="project" src="img/countrydatabase.png"></a>
-      <h3 class="text-light text-content">Country Database -></h3>
+      <div class="row" id="p">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">FTHS Band -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://fthsband.github.io/music-department/"><img class="project" src="img/ftmd.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="q">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">TCNJ CCM -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://tcnj-ccm.github.io/CCM/"><img class="project" src="img/ccm.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
+      <div class="row" id="r">
+        <div class="col col-2"></div>
+        <div class="col col-3">
+          <br><br>
+          <h3 class="text-light text-content">Country Database -></h3>
+        </div>
+        <div class="col col-6 pt-5">
+          <a href="https://anon1777.github.io/Country_Database_Redux/"><img class="project" src="img/countrydatabase.png"></a>
+        </div>
+        <div class="col col-1"></div>
+      </div>
     </div>
 </body>
 </html>
